<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/ic_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        />
    <item
        android:id="@+id/ic_map"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/maps"
        />
    <item
        android:id="@+id/ic_person"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        />

</menu>