<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/ic_home">

    <fragment
        android:id="@+id/ic_home"
        android:name="com.jejaka.jejaka_app.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/ic_search"
        android:name="com.jejaka.jejaka_app.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/ic_map"
        android:name="com.jejaka.jejaka_app.ui.maps.MapsFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/ic_person"
        android:name="com.jejaka.jejaka_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>