<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.about.AboutActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="35sp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivBeach"
        android:layout_width="373dp"
        android:layout_height="283dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:background="@drawable/beach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfile" />

    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBeach">

        <TextView
            android:id="@+id/tvdesc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_sub"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvdesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/about_desc"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvdesc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/about_desc2"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textAlignment="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>