<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/profile"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/name_dummy"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="TODO"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="@color/blue_500"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear_name"
        app:layout_constraintStart_toStartOf="@id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="15sp"
            android:textColor="?android:textColorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:counterTextColor="?android:textColorPrimary"
            app:boxStrokeColor="?android:textColorPrimary"
            app:hintTextColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_dummy"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColorHint="#757575"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="20dp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:counterTextColor="?android:textColorPrimary"
            app:boxStrokeColor="?android:textColorPrimary"
            app:hintTextColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_dummy"
                android:inputType="textPassword"
                android:lines="0"
                android:textColorHint="#757575"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="20dp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:counterTextColor="?android:textColorPrimary"
            app:boxStrokeColor="?android:textColorPrimary"
            app:hintTextColor="?android:textColorPrimary"
            android:textColorHint="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_dummy"
                android:inputType="phone"
                android:lines="1"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/help"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:backgroundTint="@color/gray"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_help_outline_24"
        app:iconTint="@color/black"
        app:iconPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/sign_out"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/gray"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_logout_24"
        app:iconPadding="20dp"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_help" />

</androidx.constraintlayout.widget.ConstraintLayout>